bug fixes + dto working